--- a/Game/project.json
+++ b/Game/project.json
@@ -1,7 +1,7 @@
 {
     "debugMode" : 1,
-    "noCache": false,
-    "showFPS" : true,
+    "noCache": true,
+    "showFPS" : false,
     "frameRate" : 60,
     "id" : "gameCanvas",
     "renderMode" : 0,
